KULRICE-3237: notes from KFS user load testing session https://test.kuali.org/jira/browse/KULRICE-3237
WorkflowDocumentServiceImpl.java:
- reduced log level from info to debug for a trivial log message
- FindBugs cleanup, incl:
  - Fixed potential null pointer dereference

DocumentServiceImpl.java:
- reduced log level from info to debug for a number of trivial log messages
- FindBugs cleanup, incl:
  - corrected inconsistent synchronization of documentDao
  - changed docmentDao from protected to private so descendants must use the synchronized getter

GlobalVariables.java:
- improved javadoc for clear() method