@@ -89,7 +89,10 @@ public class DocumentServiceImpl implements DocumentService {
 
     protected BusinessObjectService businessObjectService;
 
-    protected DocumentDao documentDao;
+    /**
+     * Don't access directly, use synchronized getter and setter to access
+     */
+    private DocumentDao documentDao;
 
     private DataDictionaryService dataDictionaryService;
 
@@ -128,42 +131,44 @@ public class DocumentServiceImpl implements DocumentService {
     }
 
     private KualiDocumentEvent generateKualiDocumentEvent(Document document, Class eventClass) throws ConfigurationException {
-	String potentialErrorMessage = "Found error trying to generate Kuali Document Event using event class '" + eventClass.getName() + "' for document " + document.getDocumentNumber();
-	try {
-	    Constructor usableConstructor = null;
-	    List<Object> paramList = null;
-	    for (Constructor currentConstructor : eventClass.getConstructors()) {
-		paramList = new ArrayList<Object>();
-		for (Class parameterClass : currentConstructor.getParameterTypes()) {
-		    if (Document.class.isAssignableFrom(parameterClass)) {
-			usableConstructor = currentConstructor;
-			paramList.add(document);
-		    } else {
-			paramList.add(null);
-    }
-		}
-		if (ObjectUtils.isNotNull(usableConstructor)) {
-		    break;
-		}
-	    }
-	    if (ObjectUtils.isNull(usableConstructor)) {
-		throw new RuntimeException("Cannot find a constructor for class '" + eventClass.getName() + "' that takes in a document parameter");
-	    }
-	    else {
-		usableConstructor.newInstance(paramList.toArray());
-		return (KualiDocumentEvent) usableConstructor.newInstance(paramList.toArray());
-	    }
-	} catch (SecurityException e) {
-	    throw new ConfigurationException(potentialErrorMessage, e);
-	} catch (IllegalArgumentException e) {
-	    throw new ConfigurationException(potentialErrorMessage, e);
-	} catch (InstantiationException e) {
-	    throw new ConfigurationException(potentialErrorMessage, e);
-	} catch (IllegalAccessException e) {
-	    throw new ConfigurationException(potentialErrorMessage, e);
-	} catch (InvocationTargetException e) {
-	    throw new ConfigurationException(potentialErrorMessage, e);
-	}
+    	String potentialErrorMessage = "Found error trying to generate Kuali Document Event using event class '" + 
+    	eventClass.getName() + "' for document " + document.getDocumentNumber();
+    	
+    	try {
+    		Constructor usableConstructor = null;
+    		List<Object> paramList = null;
+    		for (Constructor currentConstructor : eventClass.getConstructors()) {
+    			paramList = new ArrayList<Object>();
+    			for (Class parameterClass : currentConstructor.getParameterTypes()) {
+    				if (Document.class.isAssignableFrom(parameterClass)) {
+    					usableConstructor = currentConstructor;
+    					paramList.add(document);
+    				} else {
+    					paramList.add(null);
+    				}
+    			}
+    			if (ObjectUtils.isNotNull(usableConstructor)) {
+    				break;
+    			}
+    		}
+    		if (ObjectUtils.isNull(usableConstructor)) {
+    			throw new RuntimeException("Cannot find a constructor for class '" + eventClass.getName() + "' that takes in a document parameter");
+    		}
+    		else {
+    			usableConstructor.newInstance(paramList.toArray());
+    			return (KualiDocumentEvent) usableConstructor.newInstance(paramList.toArray());
+    		}
+    	} catch (SecurityException e) {
+    		throw new ConfigurationException(potentialErrorMessage, e);
+    	} catch (IllegalArgumentException e) {
+    		throw new ConfigurationException(potentialErrorMessage, e);
+    	} catch (InstantiationException e) {
+    		throw new ConfigurationException(potentialErrorMessage, e);
+    	} catch (IllegalAccessException e) {
+    		throw new ConfigurationException(potentialErrorMessage, e);
+    	} catch (InvocationTargetException e) {
+    		throw new ConfigurationException(potentialErrorMessage, e);
+    	}
     }
 
     /**
@@ -526,8 +531,8 @@ public class DocumentServiceImpl implements DocumentService {
 
 	        KualiWorkflowDocument workflowDocument = null;
 
-	        if ( LOG.isInfoEnabled() ) {
-	        	LOG.info("Retrieving doc id: " + documentHeaderId + " from workflow service.");
+	        if ( LOG.isDebugEnabled() ) {
+	        	LOG.debug("Retrieving doc id: " + documentHeaderId + " from workflow service.");
 	        }
 	        workflowDocument = getWorkflowDocumentService().createWorkflowDocument(Long.valueOf(documentHeaderId), GlobalVariables.getUserSession().getPerson());
 	        GlobalVariables.getUserSession().setWorkflowDocument(workflowDocument);
@@ -557,8 +562,8 @@ public class DocumentServiceImpl implements DocumentService {
 
         KualiWorkflowDocument workflowDocument = null;
 
-        if ( LOG.isInfoEnabled() ) {
-            LOG.info("Retrieving doc id: " + documentHeaderId + " from workflow service.");
+        if ( LOG.isDebugEnabled() ) {
+            LOG.debug("Retrieving doc id: " + documentHeaderId + " from workflow service.");
         }
 
         Person person = getPersonService().getPersonByPrincipalName(KNSConstants.SYSTEM_USER);
@@ -567,7 +572,7 @@ public class DocumentServiceImpl implements DocumentService {
         Class documentClass = getDocumentClassByTypeName(workflowDocument.getDocumentType());
 
         // retrieve the Document
-        Document document = documentDao.findByDocumentHeaderId(documentClass, documentHeaderId);
+        Document document = getDocumentDao().findByDocumentHeaderId(documentClass, documentHeaderId);
         return postProcessDocument(documentHeaderId, workflowDocument, document);
 	}
 
@@ -667,8 +672,8 @@ public class DocumentServiceImpl implements DocumentService {
             LOG.error("document passed to validateAndPersist was null");
             throw new IllegalArgumentException("invalid (null) document");
         }
-        if ( LOG.isInfoEnabled() ) {
-        	LOG.info("validating and preparing to persist document " + document.getDocumentNumber());
+        if ( LOG.isDebugEnabled() ) {
+        	LOG.debug("validating and preparing to persist document " + document.getDocumentNumber());
         }
 
         document.validateBusinessRules(event);
@@ -753,7 +758,7 @@ public class DocumentServiceImpl implements DocumentService {
         Note note = new Note();
 
         note.setNotePostedTimestamp(getDateTimeService().getCurrentTimestamp());
-        note.setVersionNumber(new Long(1));
+        note.setVersionNumber(Long.valueOf(1));
         note.setNoteText(text);
         if(document.isBoNotesSupport()) {
             note.setNoteTypeCode(KNSConstants.NoteTypeEnum.BUSINESS_OBJECT_NOTE_TYPE.getCode());
